--- a/.github/workflows/static2.yml
+++ b/.github/workflows/static2.yml
@@ -36,7 +36,7 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload entire repository
-          path: '.'
+          path: '/guide_content/redirects'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
